# MicroPython_LIS3DH

./: .pylintrc  README.rst  examples.json  lis3dh.py  package.json  pyproject.toml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: lis3dg_data_range.py  lis3dh_data_rate.py  lis3dh_simpletest.py
lis3dh/: i2c_helpers.py  lis3dh.py
micropython_lis3dh/: i2c_helpers.py  lis3dh.py
